force-app/main/default/objects/SalesforceReading__x/SalesforceReading__x.object-meta.xml
<CustomObject>
    <externalDataSource>Hera_Archive</externalDataSource>
    <externalName>SalesforceReading</externalName>
    <label>Lettura Salesforce</label>
    <pluralLabel>Letture Salesforce</pluralLabel>
</CustomObject>