force-app/main/default/objects/SalesforceReading__x/fields/CommodityFormulaC__c.field-meta.xml
<CustomField>
    <fullName>CommodityFormulaC__c</fullName>
    <description>CommodityFormulaC</description>
    <externalDeveloperName>CommodityFormulaC</externalDeveloperName>
    <label>CommodityFormulaC</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>