force-app/main/default/objects/SalesforceReading__x/fields/ReadingBand2C__c.field-meta.xml
<CustomField>
    <fullName>ReadingBand2C__c</fullName>
    <description>ReadingBand2C</description>
    <externalDeveloperName>ReadingBand2C</externalDeveloperName>
    <label>Fascia Lettura 2</label>
    <length>2</length>
    <type>Text</type>
</CustomField>