force-app/main/default/objects/SalesforceReading__x/fields/ReadingBand4C__c.field-meta.xml
<CustomField>
    <fullName>ReadingBand4C__c</fullName>
    <description>ReadingBand4C</description>
    <externalDeveloperName>ReadingBand4C</externalDeveloperName>
    <label>ReadingBand4C</label>
    <length>2</length>
    <type>Text</type>
</CustomField>