force-app/main/default/objects/SalesforceReading__x/fields/ReadingBand5C__c.field-meta.xml
<CustomField>
    <fullName>ReadingBand5C__c</fullName>
    <description>ReadingBand5C</description>
    <externalDeveloperName>ReadingBand5C</externalDeveloperName>
    <label>Fascia Lettura 5</label>
    <length>2</length>
    <type>Text</type>
</CustomField>