force-app/main/default/objects/SalesforceReading__x/fields/ReadingDate2C__c.field-meta.xml
<CustomField>
    <fullName>ReadingDate2C__c</fullName>
    <description>ReadingDate2C</description>
    <externalDeveloperName>ReadingDate2C</externalDeveloperName>
    <label>Data Lettura F2</label>
    <type>DateTime</type>
</CustomField>