force-app/main/default/objects/SalesforceReading__x/fields/ReadingDate3C__c.field-meta.xml
<CustomField>
    <fullName>ReadingDate3C__c</fullName>
    <description>ReadingDate3C</description>
    <externalDeveloperName>ReadingDate3C</externalDeveloperName>
    <label>Data Lettura F3</label>
    <type>DateTime</type>
</CustomField>