force-app/main/default/objects/SalesforceReading__x/fields/ReadingDate4C__c.field-meta.xml
<CustomField>
    <fullName>ReadingDate4C__c</fullName>
    <description>ReadingDate4C</description>
    <externalDeveloperName>ReadingDate4C</externalDeveloperName>
    <label>Data Lettura F1</label>
    <type>DateTime</type>
</CustomField>