force-app/main/default/objects/SalesforceReading__x/fields/ReadingDigitNumber2C__c.field-meta.xml
<CustomField>
    <fullName>ReadingDigitNumber2C__c</fullName>
    <description>ReadingDigitNumber2C</description>
    <externalDeveloperName>ReadingDigitNumber2C</externalDeveloperName>
    <label>Cifre Lettura 2</label>
    <length>2</length>
    <type>Text</type>
</CustomField>