force-app/main/default/objects/SalesforceReading__x/fields/ReadingDigitNumber4C__c.field-meta.xml
<CustomField>
    <fullName>ReadingDigitNumber4C__c</fullName>
    <description>ReadingDigitNumber4C</description>
    <externalDeveloperName>ReadingDigitNumber4C</externalDeveloperName>
    <label>Cifre Lettura 4</label>
    <length>2</length>
    <type>Text</type>
</CustomField>