force-app/main/default/objects/SalesforceReading__x/fields/ReadingDigitNumber7C__c.field-meta.xml
<CustomField>
    <fullName>ReadingDigitNumber7C__c</fullName>
    <description>ReadingDigitNumber7C</description>
    <externalDeveloperName>ReadingDigitNumber7C</externalDeveloperName>
    <label>Cifre Lettura 7</label>
    <length>2</length>
    <type>Text</type>
</CustomField>