force-app/main/default/objects/SalesforceReading__x/fields/ReadingDigitNumberCorrectorC__c.field-meta.xml
<CustomField>
    <fullName>ReadingDigitNumberCorrectorC__c</fullName>
    <description>ReadingDigitNumberCorrectorC</description>
    <externalDeveloperName>ReadingDigitNumberCorrectorC</externalDeveloperName>
    <label>ReadingDigitNumberCorrectorC</label>
    <length>2</length>
    <type>Text</type>
</CustomField>