force-app/main/default/objects/SalesforceReading__x/fields/ReadingOldValue1C__c.field-meta.xml
<CustomField>
    <fullName>ReadingOldValue1C__c</fullName>
    <description>ReadingOldValue1C</description>
    <externalDeveloperName>ReadingOldValue1C</externalDeveloperName>
    <label>Lettura Precedente 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>