force-app/main/default/objects/SalesforceReading__x/fields/ReadingOldValue2C__c.field-meta.xml
<CustomField>
    <fullName>ReadingOldValue2C__c</fullName>
    <description>ReadingOldValue2C</description>
    <externalDeveloperName>ReadingOldValue2C</externalDeveloperName>
    <label>Lettura Precedente 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>