force-app/main/default/objects/SalesforceReading__x/fields/ReadingOldValue9C__c.field-meta.xml
<CustomField>
    <fullName>ReadingOldValue9C__c</fullName>
    <description>ReadingOldValue9C</description>
    <externalDeveloperName>ReadingOldValue9C</externalDeveloperName>
    <label>ReadingOldValue9C</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>