force-app/main/default/objects/SalesforceReading__x/fields/ReadingRegister1C__c.field-meta.xml
<CustomField>
    <fullName>ReadingRegister1C__c</fullName>
    <description>ReadingRegister1C</description>
    <externalDeveloperName>ReadingRegister1C</externalDeveloperName>
    <label>ReadingRegister1C</label>
    <length>3</length>
    <type>Text</type>
</CustomField>