force-app/main/default/objects/SalesforceReading__x/fields/ReadingRegister5C__c.field-meta.xml
<CustomField>
    <fullName>ReadingRegister5C__c</fullName>
    <description>ReadingRegister5C</description>
    <externalDeveloperName>ReadingRegister5C</externalDeveloperName>
    <label>Registro Lettura 5</label>
    <length>3</length>
    <type>Text</type>
</CustomField>