force-app/main/default/objects/SalesforceReading__x/fields/ReadingRegister6C__c.field-meta.xml
<CustomField>
    <fullName>ReadingRegister6C__c</fullName>
    <description>ReadingRegister6C</description>
    <externalDeveloperName>ReadingRegister6C</externalDeveloperName>
    <label>Registro Lettura 6</label>
    <length>3</length>
    <type>Text</type>
</CustomField>