force-app/main/default/objects/SalesforceReading__x/fields/ReadingSerialNumber1C__c.field-meta.xml
<CustomField>
    <fullName>ReadingSerialNumber1C__c</fullName>
    <description>ReadingSerialNumber1C</description>
    <externalDeveloperName>ReadingSerialNumber1C</externalDeveloperName>
    <label>Matricola 1</label>
    <length>18</length>
    <type>Text</type>
</CustomField>