force-app/main/default/objects/SalesforceReading__x/fields/ReadingSerialNumber2C__c.field-meta.xml
<CustomField>
    <fullName>ReadingSerialNumber2C__c</fullName>
    <description>ReadingSerialNumber2C</description>
    <externalDeveloperName>ReadingSerialNumber2C</externalDeveloperName>
    <label>Matricola 2</label>
    <length>18</length>
    <type>Text</type>
</CustomField>