force-app/main/default/objects/SalesforceReading__x/fields/ReadingSerialNumber6C__c.field-meta.xml
<CustomField>
    <fullName>ReadingSerialNumber6C__c</fullName>
    <description>ReadingSerialNumber6C</description>
    <externalDeveloperName>ReadingSerialNumber6C</externalDeveloperName>
    <label>ReadingSerialNumber6C</label>
    <length>18</length>
    <type>Text</type>
</CustomField>