force-app/main/default/objects/SalesforceReading__x/fields/ReadingSerialNumberCorrectorC__c.field-meta.xml
<CustomField>
    <fullName>ReadingSerialNumberCorrectorC__c</fullName>
    <description>ReadingSerialNumberCorrectorC</description>
    <externalDeveloperName>ReadingSerialNumberCorrectorC</externalDeveloperName>
    <label>Matricola Correttore</label>
    <length>18</length>
    <type>Text</type>
</CustomField>