force-app/main/default/objects/SalesforceReading__x/fields/ReadingSerialNumberMeterC__c.field-meta.xml
<CustomField>
    <fullName>ReadingSerialNumberMeterC__c</fullName>
    <description>ReadingSerialNumberMeterC</description>
    <externalDeveloperName>ReadingSerialNumberMeterC</externalDeveloperName>
    <label>Matricola Misuratore</label>
    <length>18</length>
    <type>Text</type>
</CustomField>