force-app/main/default/objects/SalesforceReading__x/fields/ReadingType3C__c.field-meta.xml
<CustomField>
    <fullName>ReadingType3C__c</fullName>
    <description>ReadingType3C</description>
    <externalDeveloperName>ReadingType3C</externalDeveloperName>
    <label>ReadingType3C</label>
    <length>50</length>
    <type>Text</type>
</CustomField>