force-app/main/default/objects/SalesforceReading__x/fields/ReadingType9C__c.field-meta.xml
<CustomField>
    <fullName>ReadingType9C__c</fullName>
    <description>ReadingType9C</description>
    <externalDeveloperName>ReadingType9C</externalDeveloperName>
    <label>ReadingType9C</label>
    <length>50</length>
    <type>Text</type>
</CustomField>