force-app/main/default/objects/SalesforceReading__x/fields/ReadingTypeMeterC__c.field-meta.xml
<CustomField>
    <fullName>ReadingTypeMeterC__c</fullName>
    <description>ReadingTypeMeterC</description>
    <externalDeveloperName>ReadingTypeMeterC</externalDeveloperName>
    <label>Tipo Lettura Misuratore</label>
    <length>50</length>
    <type>Text</type>
</CustomField>