force-app/main/default/objects/SalesforceReading__x/fields/ReadingUnit2C__c.field-meta.xml
<CustomField>
    <fullName>ReadingUnit2C__c</fullName>
    <description>ReadingUnit2C</description>
    <externalDeveloperName>ReadingUnit2C</externalDeveloperName>
    <label>ReadingUnit2C</label>
    <length>3</length>
    <type>Text</type>
</CustomField>