force-app/main/default/objects/SalesforceReading__x/fields/ReadingUnit4C__c.field-meta.xml
<CustomField>
    <fullName>ReadingUnit4C__c</fullName>
    <description>ReadingUnit4C</description>
    <externalDeveloperName>ReadingUnit4C</externalDeveloperName>
    <label>ReadingUnit4C</label>
    <length>3</length>
    <type>Text</type>
</CustomField>