force-app/main/default/objects/SalesforceReading__x/fields/ReadingUnit6C__c.field-meta.xml
<CustomField>
    <fullName>ReadingUnit6C__c</fullName>
    <description>ReadingUnit6C</description>
    <externalDeveloperName>ReadingUnit6C</externalDeveloperName>
    <label>ReadingUnit6C</label>
    <length>3</length>
    <type>Text</type>
</CustomField>