force-app/main/default/objects/SalesforceReading__x/fields/ReadingUnitMeterC__c.field-meta.xml
<CustomField>
    <fullName>ReadingUnitMeterC__c</fullName>
    <description>ReadingUnitMeterC</description>
    <externalDeveloperName>ReadingUnitMeterC</externalDeveloperName>
    <label>Unità di Misura Misuratore</label>
    <length>3</length>
    <type>Text</type>
</CustomField>