force-app/main/default/objects/SalesforceReading__x/fields/ReadingValue2C__c.field-meta.xml
<CustomField>
    <fullName>ReadingValue2C__c</fullName>
    <description>ReadingValue2C</description>
    <externalDeveloperName>ReadingValue2C</externalDeveloperName>
    <label>ReadingValue2C</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>