force-app/main/default/objects/SalesforceReading__x/fields/ReadingValue3C__c.field-meta.xml
<CustomField>
    <fullName>ReadingValue3C__c</fullName>
    <description>ReadingValue3C</description>
    <externalDeveloperName>ReadingValue3C</externalDeveloperName>
    <label>ReadingValue3C</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>