force-app/main/default/objects/SalesforceReading__x/fields/ReadingValue4C__c.field-meta.xml
<CustomField>
    <fullName>ReadingValue4C__c</fullName>
    <description>ReadingValue4C</description>
    <externalDeveloperName>ReadingValue4C</externalDeveloperName>
    <label>ReadingValue4C</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>